# paprika-backend

./: .env.example  .gitignore  Cargo.toml  LoC.py  Makefile  README.md  color_generator.py
.github/workflows/: ci.yml
data/: Hello.json  helloworld.sol
example/: api.md
paper/: README.md
src/: abi.rs  api.rs  bytecode_to_image.rs  cache.rs  call.rs  cfg.rs  cleaner.rs  compare_by_cfg.rs  constants.rs  database.rs  disassemble.rs  guess_magic_result.rs  image_analysis.rs  init.rs  lib.rs  logger.rs  main.rs  opcode.rs  selector.rs  utils.rs
tests/: abi.rs  call.rs  cfg.rs  core.rs  database.rs  disassemble.rs  guess_result.rs  image_analysis.rs  opcode.rs  selector.rs
